<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_delete"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_delete"
        />
    <item
        android:id="@+id/action_create_file"
        android:showAsAction="ifRoom"
        android:title="@string/action_create_file"
        />
    <item
        android:id="@+id/action_create_directory"
        android:showAsAction="ifRoom"
        android:title="@string/action_create_directory"
        />
    <group android:id="@+id/group_media_store">
        <item
            android:id="@+id/action_scan_file"
            android:title="@string/action_scan_file"
            />
        <item
            android:id="@+id/action_scan_file_intent"
            android:title="@string/action_scan_file_intent"
            />
        <item
            android:id="@+id/action_delete_record_media"
            android:title="@string/action_delete_record_media"
            />
        <item
            android:id="@+id/action_delete_record_file"
            android:title="@string/action_delete_record_file"
            />
    </group>

</menu>
